[metadata]
name = iphotmap
description = ip hotmap display for various tools
author = nipil
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
packages =
    iphotmap
;install_requires =
;    requests>=2
python_requires = >=3.11
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=7.0
    mypy>=1.10
    pytest>=8.1
    pytest-cov>=5.0
    tox>=4.15

[options.package_data]
iphotmap = py.typed

[flake8]
max-line-length = 160
